--- a/ciderMap.html
+++ b/ciderMap.html
@@ -1,1 +1,10 @@
-<div id='map'></div>
+<html>
+   <head>
+      <title>HTML link Tag</title>
+      <link rel = "stylesheet" href = "..\ciderMapCSS.css">
+   </head>
+   <body>
+      <script type="text/javascript" src="..\ciderMapJS.js"></script>
+      <div id='map'></div>
+   </body>
+</html>
