--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
    <head>
       <title>HTML link Tag</title>
-      <link rel = "stylesheet" href = "..\ciderMapCSS.css">
+      <link rel = "stylesheet" href = "https://github.com/itstommills/ukcidermap/blob/33935419c431d478788d29243091858c5b40a2b4/ciderMapCSS.css">
    </head>
    <body>
-      <script type="text/javascript" src="..\ciderMapJS.js"></script>
+      <script type="text/javascript" src="https://github.com/itstommills/ukcidermap/blob/33935419c431d478788d29243091858c5b40a2b4/ciderMapJS.js"></script>
       <div id='map'></div>
+      <p> hello world
    </body>
 </html>
