--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
 <html>
-   <head>
-      <title>HTML link Tag</title>
-      <link rel = "stylesheet" href = "..\ciderMapCSS.css">
-   </head>
-   <body>
-      <script type="text/javascript" src="..\ciderMapJS.js"></script>
-      <div id='map'></div>
-   </body>
+<head>
+  <meta charset="utf-8">
+  <title>Display a map on a webpage</title>
+  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css" rel="stylesheet">
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js"></script>
+  <style>
+  body { margin: 0; padding: 0; }
+  #map { position: absolute; top: 0; bottom: 0; width: 100%; }
+</style>
+</head>
+
+<body>
+  <div id="map"></div>
+  <script>
+  mapboxgl.accessToken = 'pk.eyJ1IjoiaXRzdG9tbWlsbHMiLCJhIjoiY2txdGRuY2Y4MHMyNDJ3bzN0MDE4cnFpbyJ9.bUhw0_nhK0cIQ9TBQAJC7g';
+  var map = new mapboxgl.Map({
+    container: 'map', // container id
+    style: 'mapbox://styles/mapbox/streets-v11', // style URL
+    center: [-74.5, 40], // starting position [lng, lat]
+    zoom: 9 // starting zoom
+  });
+
+
+      map.on('load', function () {
+          map.addSource('ciderys', {
+              type: 'geojson',
+              // Use a URL for the value for the `data` property.
+              data: './ciderMapLocations.json'
+          });
+
+          map.addLayer({
+              'id': 'ciderys-layer',
+              'type': 'circle',
+              'source': 'ciderys',
+              'paint': {
+                  'circle-radius': 8,
+                  'circle-stroke-width': 2,
+                  'circle-color': 'red',
+                  'circle-stroke-color': 'white'
+              }
+          });
+      });
+
+</script>
+</body>
+
 </html>
