--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -18,8 +20,8 @@
   var map = new mapboxgl.Map({
     container: 'map', // container id
     style: 'mapbox://styles/mapbox/streets-v11', // style URL
-    center: [-74.5, 40], // starting position [lng, lat]
-    zoom: 9 // starting zoom
+    center: [-77.04, 38.907], // starting position [lng, lat]
+    zoom: 5 // starting zoom
   });
 
 
@@ -56,33 +58,33 @@
 
       // When a click event occurs on a feature in the places layer, open a popup at the
       // location of the feature, with description HTML from its properties.
-      map.on('click', 'places', function (e) {
-          var coordinates = e.features[0].geometry.coordinates.slice();
-          var description = e.features[0].properties.description;
+//      map.on('click', 'places', function (e) {
+//          var coordinates = e.features[0].geometry.coordinates.slice();
+//          var description = e.features[0].properties.description;
 
           // Ensure that if the map is zoomed out such that multiple
           // copies of the feature are visible, the popup appears
           // over the copy being pointed to.
-          while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
-              coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
-          }
+//          while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
+//              coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
+//          }
 
-          new mapboxgl.Popup()
-              .setLngLat(coordinates)
-              .setHTML(description)
-              .addTo(map);
-      });
+//          new mapboxgl.Popup()
+//              .setLngLat(coordinates)
+//              .setHTML(description)
+//              .addTo(map);
+//      });
 
       // Change the cursor to a pointer when the mouse is over the places layer.
-      map.on('mouseenter', 'places', function () {
-          map.getCanvas().style.cursor = 'pointer';
-      });
+  //    map.on('mouseenter', 'places', function () {
+  //        map.getCanvas().style.cursor = 'pointer';
+  //    });
 
       // Change it back to a pointer when it leaves.
-      map.on('mouseleave', 'places', function () {
-          map.getCanvas().style.cursor = '';
-      });
-  });
+//      map.on('mouseleave', 'places', function () {
+//          map.getCanvas().style.cursor = '';
+//      });
+//  });
 
 
 </script>
