--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           map.addSource('ciderys', {
               type: 'geojson',
               // Use a URL for the value for the `data` property.
-              data: './ciderMapLocations.json'
+              data: 'https://itstommills.github.io/ukcidermap/ciderMapLocations.json'
           });
 
           map.addLayer({
