--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   mapboxgl.accessToken = 'pk.eyJ1IjoiaXRzdG9tbWlsbHMiLCJhIjoiY2txdGRuY2Y4MHMyNDJ3bzN0MDE4cnFpbyJ9.bUhw0_nhK0cIQ9TBQAJC7g';
   var map = new mapboxgl.Map({
     container: 'map', // container id
-    style: 'mapbox://styles/mapbox/streets-v11', // style URL
-    center: [-77.04, 38.907], // starting position [lng, lat]
-    zoom: 5 // starting zoom
+    style: 'mapbox://styles/itstommills/ckqtdp32a64o119n2xcrnhv7p', // style URL
+    center: [-1.3367785814806332, 52.14493463385326], // starting position [lng, lat]
+    zoom: 5.5 // starting zoom
   });
 
 
