--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
           new mapboxgl.Popup()
               .setLngLat(coordinates)
-              .setHTML('<h3>' + title + '</h3><p>' + url + address)
+              .setHTML('<h3>' + title + '</h3><p>' + address + '<p>' + url)
               .addTo(map);
       });
 
