--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
           new mapboxgl.Popup()
               .setLngLat(coordinates)
-              .setHTML('<h3>' + title + '</h3><p>' + address + '<p>' + url)
+              .setHTML('<p style="font-size:20px"><strong>' + title + '</strong></p><p>' + address + '<p>' + url)
               .addTo(map);
       });
 
