--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
   <meta charset="utf-8">
   <title>UK Cidery Map</title>
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
-  <link href="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css" rel="stylesheet">
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css" rel="stylesheet" />
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js"></script>
-  <style>
-  body { margin: 0; padding: 0; }
-  #map { position: absolute; top: 0; bottom: 0; width: 100%; }
-</style>
 </head>
+
+<link href="./ciderMapCSS" rel="stylesheet" />
+
+<style>
+body { margin: 0; padding: 0; }
+#map { position: absolute; top: 0; bottom: 0; width: 100%; }
+</style>
 
 <body>
   <div id="map"></div>
@@ -70,7 +73,7 @@
               .setLngLat(coordinates)
               .setHTML(`<table>
                               <tr>
-                                  <td><img src="https://cdn.shopify.com/s/files/1/0378/9504/5252/files/LP_logo_360x.png?v=1586516335" alt="Little Pomona Logo" style="max-width: 150px"></td>
+                                  <td>${logo}</td>
                                   <td><p style="font-size:20px"><strong>${title}</strong></p>${address}<br><br>${url}</td>
                               </tr>
                               </table>`)
