--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ body { margin: 0; padding: 0; }
       // location of the feature, with description HTML from its properties.
       map.on('click', 'ciderys-layer', function (e) {
           var coordinates = e.features[0].geometry.coordinates.slice();
+          var logo = e.features[0].properties.logo;
           var title = e.features[0].properties.title;
           var url = e.features[0].properties.url;
           var address = e.features[0].properties.address;
@@ -73,7 +74,7 @@ body { margin: 0; padding: 0; }
               .setLngLat(coordinates)
               .setHTML(`<table>
                               <tr>
-                                  <td>${logo}</td>
+                                  <td><img src="${logo}" style="max-width: 150px"></td>
                                   <td><p style="font-size:20px"><strong>${title}</strong></p>${address}<br><br>${url}</td>
                               </tr>
                               </table>`)
