--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               .setLngLat(coordinates)
               .setHTML(`<table>
                               <tr>
-                                  <td><img src="${logo}" style="max-width: 150px"></td>
+                                  <td>${logo}</td>
                                   <td><p style="font-size:20px"><strong>${title}</strong></p>${address}<br><br>${url}</td>
                               </tr>
                               </table>`)
