--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       // location of the feature, with description HTML from its properties.
       map.on('click', 'ciderys-layer', function (e) {
           var coordinates = e.features[0].geometry.coordinates.slice();
-          var logo = e.features[0].properties.logo;
+          var brandlogo = e.features[0].properties.brandlogo;
           var title = e.features[0].properties.title;
           var url = e.features[0].properties.url;
           var address = e.features[0].properties.address;
@@ -68,7 +68,7 @@
               .setLngLat(coordinates)
               .setHTML(`<table>
                               <tr>
-                                  <td>${logo}</td>
+                                  <td>${brandlogo}</td>
                                   <td><p style="font-size:20px"><strong>${title}</strong></p>${address}<br><br>${url}</td>
                               </tr>
                               </table>`)
