--- a/index.html
+++ b/index.html
@@ -69,10 +69,11 @@
               .setHTML(`<table>
                               <tr>
                                   <td>${brandlogo}</td>
-                                  <td><p style="font-size:20px"><strong>${title}</strong></p>${address}<br><br>${url}</td>
+                                  <td><p style="font-size:23px"><strong>${title}</strong></p>${address}<br><br>${url}</td>
                               </tr>
                               </table>`)
 
+              .setMaxWidth("400px")
               .addTo(map);
       });
 
