--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           var brandlogo = e.features[0].properties.brandlogo;
           var title = e.features[0].properties.title;
           var url = e.features[0].properties.url;
+          var description = e.features[0].properties.description;
           var address = e.features[0].properties.address;
 
           // Ensure that if the map is zoomed out such that multiple
@@ -69,7 +70,7 @@
               .setHTML(`<table>
                               <tr>
                                   <td>${brandlogo}</td>
-                                  <td><p style="font-size:23px"><strong>${title}</strong></p>${address}<br><br>${url}</td>
+                                  <td><p style="font-size:23px"><strong>${title}</strong></p>${description}<br><br>${address}</td>
                               </tr>
                               </table>`)
 
