Working First Draft

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
               .setHTML(`<table>
                               <tr>
                                   <td>${brandlogo}</td>
-                                  <td><p style="font-size:23px"><strong>${title}</strong></p>${description}<br><br>${address}</td>
+                                  <td><p style="font-size:23px"><strong>${title}</strong></p>${description}<br><br>${address}<br></td>
                               </tr>
                               </table>`)
 
-              .setMaxWidth("400px")
+              .setMaxWidth("450px")
               .addTo(map);
       });
 
