--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://itstommills.github.io/ukcidermap/ciderMapCSS.css" rel="stylesheet" />
 </head>
 
+
 <body>
   <div id="map"></div>
   <script>
@@ -70,7 +71,7 @@
               .setHTML(`<table>
                               <tr>
                                   <td>${brandlogo}</td>
-                                  <td><p style="font-size:23px"><strong>${title}</strong></p>${description}<br><br>${address}<br></td>
+                                  <td><p style="font-size:23px"><strong>${title}</strong></p>${description}<br><br>${address}<br><br></td>
                               </tr>
                               </table>`)
 
