--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
           map.getCanvas().style.cursor = '';
       });
 
+      // Add zoom and rotation controls to the map.
+      map.addControl(new mapboxgl.FullscreenControl());
+      map.addControl(new mapboxgl.NavigationControl());
 
 
 </script>
