--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css" rel="stylesheet" />
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js"></script>
   <link href="https://itstommills.github.io/ukcidermap/ciderMapCSS.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 
@@ -71,12 +72,12 @@
                                   <td colspan='2'><p style="font-size:23px; text-align:center"><strong>${title}</strong></p></td>
                               </tr>
                               <tr>
-                                  <td>Icon1</td>
-                                  <td><p style="font-size:20px">${buying}</p></td>
+                                  <td width="30"><span class="material-icons">store</span></td>
+                                  <td><p style="font-size:17px">${buying}</p></td>
                               </tr>
                               <tr>
-                                  <td>Icon2</td>
-                                  <td><p style="font-size:20px">${address}</p></td>
+                                  <td width="30"><span class="material-icons">mapmarker</span></td>
+                                  <td><p style="font-size:17px">${address}</p></td>
                               </tr>
                               </table>`)
               .setMaxWidth("350px")
