--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
                                   <td colspan='2'><p style="font-size:23px; text-align:center"><strong>${title}</strong></p></td>
                               </tr>
                               <tr>
-                                  <td><span class="material-icons">store</span></td>
-                                  <td><p style="font-size:12px; word-wrap:break-word">${buying}</p></td>
+                                  <td><span class="material-icons">language</span></td>
+                                  <td><p style="font-size:14px">${buying}</p></td>
                               </tr>
                               <tr>
-                                  <td><span class="material-icons">mapmarker</span></td>
-                                  <td><p style="font-size:12px; word-wrap:break-word">${address}</p></td>
+                                  <td><span class="material-icons">my_location</span></td>
+                                  <td><p style="font-size:14px">${address}</p></td>
                               </tr>
                               </tbody>
                               </table>`)
