--- a/index.html
+++ b/index.html
@@ -68,22 +68,22 @@
 
           new mapboxgl.Popup()
               .setLngLat(coordinates)
-              .setHTML (`<table style="table-layout:fixed; width:350px">
+              .setHTML (`<table class="tableMap" style="table-layout:fixed; width:350px">
               								<colgroup>
                               		<col span="1" style="width: 10%;">
                                   <col span="1" style="width: 90%;">
                               </colgroup>
                               <tbody>
                               <tr>
-                                  <td colspan='2' style="font-size:23px; text-align:center;" height="50"><strong>${title}</strong></td>
+                                  <td class="tdMap" colspan='2' style="font-size:23px; text-align:center;" height="50"><strong>${title}</strong></td>
                               </tr>
                               <tr>
-                                  <td style="text-align:center; vertical-align:middle;"><span class="material-icons md-18">language</span></td>
-                                  <td style="font-size:14px">${buying}</td>
+                                  <td class="tdMap" style="text-align:center; vertical-align:middle;"><span class="material-icons md-18">language</span></td>
+                                  <td class="tdMap" style="font-size:14px">${buying}</td>
                               </tr>
                               <tr>
-                                  <td style="text-align:center"><span class="material-icons md-18">my_location</span></td>
-                                  <td style="font-size:14px">${address}</td>
+                                  <td class="tdMap" style="text-align:center"><span class="material-icons md-18">my_location</span></td>
+                                  <td class="tdMap" style="font-size:14px">${address}</td>
                               </tr>
                               </tbody>
                               </table>`)
