--- a/leaflet-sidebar-v2-master/examples/index.html
+++ b/leaflet-sidebar-v2-master/examples/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
         crossorigin=""/>
 
-    <link rel="stylesheet" href="../css/leaflet-sidebar.css" />
+    <link rel="stylesheet" href="./leaflet-sidebar-v2-master/css/leaflet-sidebar.css" />
 
     <style>
         body {
@@ -100,7 +100,7 @@
 
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
         crossorigin=""></script>
-    <script src="../js/leaflet-sidebar.js"></script>
+    <script src="./leaflet-sidebar-v2-master/js/leaflet-sidebar.js"></script>
 
     <script>
         // standard leaflet map setup
