--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
   <meta charset="utf-8">
   <title>UK Cidery Map</title>
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
-  <link href="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css" rel="stylesheet" />
-  <script src="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js"></script>
-  <link href="https://itstommills.github.io/ukcidermap/ciderMapCSS.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="htdocs/webmap101/leaflet.ajax.min.js" type="text/javascript" ></script>
+
+<style>
+#map {
+  width: 960px;
+  height: 500px;
+}
+</style>
+
 </head>
 
 
@@ -16,100 +24,29 @@
 <body>
   <div id="map"></div>
   <script>
-  mapboxgl.accessToken = 'pk.eyJ1IjoiaXRzdG9tbWlsbHMiLCJhIjoiY2txdGRuY2Y4MHMyNDJ3bzN0MDE4cnFpbyJ9.bUhw0_nhK0cIQ9TBQAJC7g';
-  var map = new mapboxgl.Map({
-    container: 'map', // container id
-    style: 'mapbox://styles/itstommills/cksewhfexde6m18qqdog0pk37', // style URL
-    center: [-2.775464074083465, 54.23777317792032], // starting position [lng, lat]
-    zoom: 5 // starting zoom
-  });
+  var map = L.map('map').setView([54.23777317792032, -2.775464074083465], 5)
 
+  L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+    attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+    maxZoom: 18,
+    id: 'mapbox/streets-v11',
+    tileSize: 512,
+    zoomOffset: -1,
+    accessToken: 'pk.eyJ1IjoiaXRzdG9tbWlsbHMiLCJhIjoiY2t2Y2p4Ym5tNGt4MTJ1cXdmN2Jic3VvYiJ9.jDGMGgxXD8dHT2o1ZH31dA'
+  }).addTo(map);
 
-      map.on('load', function () {
-          map.addSource('ciderys', {
-              type: 'geojson',
-              // Use a URL for the value for the `data` property.
-              data: 'https://itstommills.github.io/ukcidermap/ciderMapLocations.json'
-          });
+  var ciderys = new L.geoJson();
+  district_boundary.addTo(map);
 
-          map.addLayer({
-              'id': 'ciderys-layer',
-              'type': 'circle',
-              'source': 'ciderys',
-              'paint': {
-                  'circle-radius': 8,
-                  'circle-stroke-width': 2,
-                  'circle-color': 'red',
-                  'circle-stroke-color': 'white'
-              }
-          });
+  $.ajax({
+  dataType: "json",
+  url: "https://itstommills.github.io/ukcidermap/ciderMapLocations.json",
+  success: function(data) {
+      $(data.features).each(function(key, data) {
+          district_boundary.addData(data);
       });
-
-      // When a click event occurs on a feature in the places layer, open a popup at the
-      // location of the feature, with description HTML from its properties.
-      map.on('click', 'ciderys-layer', function (e) {
-          var coordinates = e.features[0].geometry.coordinates.slice();
-          var title = e.features[0].properties.title;
-          var buying = e.features[0].properties.buying;
-          var address = e.features[0].properties.address;
-
-          // Ensure that if the map is zoomed out such that multiple
-          // copies of the feature are visible, the popup appears
-          // over the copy being pointed to.
-          while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
-              coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
-          }
-
-//          new mapboxgl.Popup()
-//              .setLngLat(coordinates)
-//              .setHTML('<p style="font-size:20px"><strong>' + title + '</strong></p><p>' + address + '<p>' + url)
-//              .addTo(map);
-//      });
-
-          new mapboxgl.Popup()
-              .setLngLat(coordinates)
-              .setHTML (`<table class="tableMap" style="table-layout:fixed; width:350px">
-              								<colgroup>
-                              		<col span="1" style="width: 10%;">
-                                  <col span="1" style="width: 90%;">
-                              </colgroup>
-                              <tbody>
-                              <tr>
-                                  <td class="tdMap" colspan='2' style="font-size:23px; text-align:center;" height="50"><strong>${title}</strong></td>
-                              </tr>
-                              <tr>
-                                  <td class="tdMap" style="text-align:center; vertical-align:middle;"><span class="material-icons md-18">language</span></td>
-                                  <td class="tdMap" style="font-size:14px">${buying}</td>
-                              </tr>
-                              <tr>
-                                  <td class="tdMap" style="text-align:center"><span class="material-icons md-18">my_location</span></td>
-                                  <td class="tdMap" style="font-size:14px">${address}</td>
-                              </tr>
-                              </tbody>
-                              </table>`)
-              .setMaxWidth("400px")
-              .addTo(map);
-      });
-
-      // Change the cursor to a pointer when the mouse is over the places layer.
-      map.on('mouseenter', 'ciderys-layer', function () {
-          map.getCanvas().style.cursor = 'pointer';
-      });
-
-      // Change it back to a pointer when it leaves.
-      map.on('mouseleave', 'ciderys-layer', function () {
-          map.getCanvas().style.cursor = '';
-      });
-
-      // Add zoom and rotation controls to the map.
-      map.addControl(new mapboxgl.FullscreenControl());
-      map.addControl(new mapboxgl.NavigationControl());
-      map.addControl(new mapboxgl.GeolocateControl({
-          fitBoundsOptions: {
-            maxZoom:10
-          }
-      }));
-
+  }
+  }).error(function() {});
 
 </script>
 </body>
